load("//:def.bzl", "create_backend")

create_backend(
    name = "mybackend",
)

cc_library(
    name = "peek_iface",
    hdrs = ["peek.h"],
    includes = ["."],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "peek",
    srcs = ["peek.cpp"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [":peek_iface", "//peek:mybackend"],
)
