load("//:def.bzl", "create_backend")# , "create_backend_setting")

create_backend()


# label_setting(
#     name = "mybackend",
#     build_setting_default = ":empty",
# )

# create_backend_setting(
#     name = "mybackend",
#     build_setting_default = ":empty",
#     lib = ":empty",
# )

cc_library(
    name = "peek_iface",
    hdrs = ["peek.h"],
    includes = ["."],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "peek",
    srcs = ["peek.cpp"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        ":peek_iface",
        ":mybackend",
    ],
)
