load(":def.bzl", "FACADE_LABEL")
load("//:def.bzl", "facade")

facade.setup_facade_library("facade")

cc_library(
    name = "peek_iface",
    hdrs = ["peek.h"],
    includes = ["."],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "peek",
    srcs = ["peek.cpp"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        ":peek_iface",
        FACADE_LABEL,
    ],
)
