
load("//:def.bzl", "set_backend")

cc_library(
    linkstatic = True,
    name = "peekA_impl",
    srcs = ["peek.cpp"],
    deps = ["//peek:peek_iface"],
)

set_backend(name = 'peekA',
    backend_lib = "peekA_impl",
    library = "//peek",
    visibility = ["//visibility:public"],
)

# cc_library(
#     linkstatic = True,
#     name = "peekA",
#     deps = ["//peek", ":peekA_impl"],
#     visibility = ["//visibility:public"],
# )
