
load("//peek:def.bzl", "create_facade_library")

cc_library(
    linkstatic = True,
    name = "peekA_impl",
    srcs = ["peek.cpp"],
    deps = ["//peek:peek_iface"],
)

create_facade_library(name = 'peekA',
    facade_impl = "peekA_impl",
    facade = "//peek",
    visibility = ["//visibility:public"],
)
