load("//peek:def.bzl", "create_facade_library")

cc_library(
    name = "peekB_impl",
    srcs = ["peek.cpp"],
    linkstatic = True,
    deps = ["//peek:peek_iface"],
)

create_facade_library(
    name = "peekB",
    facade = "//peek",
    facade_impl = "peekB_impl",
    visibility = ["//visibility:public"],
)
